<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".AppInfo">

    <include layout="@layout/menu_bar" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center">

            <LinearLayout
                android:id="@+id/noResultsArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">


                <ImageView
                    android:onClick="openExternalUrl"
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginBottom="@dimen/paddin_input"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/paddin_input"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/colorIndicator"
                    android:textSize="@dimen/titlePage" />


                <TextView
                    android:id="@+id/textView2"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/subtitle_aboutapp"
                    android:textColor="@color/colorIndicator"
                    android:textSize="@dimen/subtitlePage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/paddingParam"
                    android:layout_marginTop="@dimen/paddingParam"
                    >


                    <Button
                        android:onClick="openWhatsapp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:focusable="true"
                        android:fontFamily="@font/fontawesome_webfont"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:gravity="center"
                        android:paddingBottom="@dimen/paddingParam"
                        android:paddingTop="@dimen/paddingParam"
                        android:text="@string/icon_whatsapp"
                        android:textColor="@color/colorIndicator"
                        android:textSize="@dimen/titlePage" />

                    <Button
                        android:onClick="openLinkedin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:focusable="true"
                        android:fontFamily="@font/fontawesome_webfont"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:gravity="center"
                        android:paddingBottom="@dimen/paddingParam"
                        android:paddingTop="@dimen/paddingParam"
                        android:text="@string/icon_linkedin"
                        android:textColor="@color/colorIndicator"
                        android:textSize="@dimen/titlePage" />

                    <Button
                        android:onClick="openGit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:focusable="true"
                        android:fontFamily="@font/fontawesome_webfont"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:gravity="center"
                        android:paddingBottom="@dimen/paddingParam"
                        android:paddingTop="@dimen/paddingParam"
                        android:text="@string/icon_github"
                        android:textColor="@color/colorIndicator"
                        android:textSize="@dimen/titlePage" />

                    <Button
                        android:onClick="openFacebook"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:focusable="true"
                        android:fontFamily="@font/fontawesome_webfont"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:gravity="center"
                        android:paddingBottom="@dimen/paddingParam"
                        android:paddingTop="@dimen/paddingParam"
                        android:text="@string/icon_facebook"
                        android:textColor="@color/colorIndicator"
                        android:textSize="@dimen/titlePage" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_height"
                        android:background="@drawable/btn_radius_background_white"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:onClick="comeBack"
                        android:paddingLeft="@dimen/paddingParam"
                        android:paddingRight="@dimen/paddingParam"
                        android:text="Voltar"
                        android:textColor="@color/colorPrimaryDark" />


                    <Button
                        android:id="@+id/butto2n"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:gravity="center|end"
                        android:onClick="openRepository"
                        android:paddingLeft="@dimen/paddingParam"
                        android:paddingRight="@dimen/paddingParam"
                        android:text="Repositório"
                        android:textColor="@color/colorIndicator" />
                </LinearLayout>


            </LinearLayout>


        </FrameLayout>

        <include layout="@layout/draw_bar" />


    </android.support.v4.widget.DrawerLayout>
</LinearLayout>