<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".BaseApp">

    <include layout="@layout/menu_bar"/>

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listSearch"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:divider="@null"
                    android:drawSelectorOnTop="true"
                    android:paddingLeft="@dimen/paddingParam"
                    android:paddingRight="@dimen/paddingParam"
                    android:paddingTop="10dp" />

                <LinearLayout
                    android:id="@+id/paginationArea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <Button
                        android:id="@+id/btn_BEFORE"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:gravity="center|start"
                        android:padding="@dimen/paddingParam"
                        android:text="Anterior"
                        android:textColor="@color/colorIndicator" />


                    <TextView
                        android:id="@+id/pageCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat_regular"
                        android:gravity="center"
                        android:padding="@dimen/paddingParam"
                        android:text="0/0"
                        android:textColor="@color/colorIndicator" />


                    <Button
                        android:id="@+id/btn_AFTER"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:gravity="center|end"
                        android:padding="@dimen/paddingParam"
                        android:text="Próximo"
                        android:textColor="@color/colorIndicator" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/noResultsArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="40dp">


                <TextView
                    android:id="@+id/ff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/paddin_input"
                    android:fontFamily="@font/fontawesome_webfont"
                    android:text="@string/icon_search"
                    android:textColor="@color/colorIndicator"
                    android:textSize="80dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/paddin_input"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/text_wecome_baseapp"
                    android:textColor="@color/colorIndicator"
                    android:textSize="@dimen/titlePage" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/subtitle_baseapp"
                    android:textColor="@color/colorIndicator"
                    android:textSize="@dimen/subtitlePage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_height"
                        android:layout_marginTop="@dimen/paddingParam"
                        android:background="@drawable/btn_radius_background_white"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:onClick="searchClick"
                        android:paddingLeft="@dimen/paddingParam"
                        android:paddingRight="@dimen/paddingParam"
                        android:text="Pesquisar"
                        android:textColor="@color/colorPrimaryDark" />


                    <Button
                        android:id="@+id/butto2n"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/paddingParam"
                        android:layout_weight="1"
                        android:background="@color/color_transparent"
                        android:focusable="true"
                        android:fontFamily="@font/montserrat_bold"
                        android:foreground="@drawable/btn_radius_foreground_"
                        android:gravity="center|end"
                        android:onClick="myListClick"
                        android:paddingLeft="@dimen/paddingParam"
                        android:paddingRight="@dimen/paddingParam"
                        android:text="@string/draw_right_mylist"
                        android:textColor="@color/colorIndicator" />
                </LinearLayout>


            </LinearLayout>

            <include
                layout="@layout/search_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include layout="@layout/progressbar_custom" />

        </FrameLayout>



        <include layout="@layout/draw_bar"/>



    </android.support.v4.widget.DrawerLayout>
</LinearLayout>